objects/ssot__AcademicTerm__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AcademicTermSeason__c</fullName>
        <label>Academic Season</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AcademicTermType__c</fullName>
        <label>Academic Term Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AcademicYearId__c</fullName>
        <label>Academic Year</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__GradingPeriodSequenceNumber__c</fullName>
        <label>Grading Period Sequence</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Academic Term Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InstructionalDaysCount__c</fullName>
        <label>Instructional Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LateRegistrationDateTime__c</fullName>
        <label>Late Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentAcademicTermId__c</fullName>
        <label>Parent Academic Term</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegistrationCloseDateTime__c</fullName>
        <label>Registration Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__RegistrationOpenDateTime__c</fullName>
        <label>Registration Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817600636_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AcademicTerm_ParentAcademicTermId_ma_rel</label>
        <referenceTo>ssot__AcademicTerm__dlm</referenceTo>
        <relationshipLabel>AcademicTerm_ParentAcademicTermId_ma_rel</relationshipLabel>
        <relationshipName>rel_1719817600636_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817647974_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AcademicTerm_AcademicYearId_map_Acad_rel</label>
        <referenceTo>ssot__AcademicYear__dlm</referenceTo>
        <relationshipLabel>AcademicTerm_AcademicYearId_map_Acad_rel</relationshipLabel>
        <relationshipName>rel_1719817647974_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>